--- a/src/styles.scss
+++ b/src/styles.scss
@@ -282,14 +282,10 @@ body {
     grid-template-columns: 1fr;
   }
 
-
 }
 
 
 @media all and (max-width:768px) {
-  html {
-    font-size: 12px;
-  }
 
   .galleryView {
     grid-template-columns: repeat(2, 1fr);
@@ -314,9 +310,6 @@ body {
 }
 
 @media all and (max-width:576px) {
-  html {
-    font-size: 11.5px;
-  }
 
   .galleryView {
     grid-gap: 3em;
@@ -331,9 +324,7 @@ body {
       width: 190px;
     }
   }
-  // .listView .list {
-  //   height: 70px;
-  // }
+
 }
 
 @media all and (max-width:550px) {
@@ -344,10 +335,18 @@ body {
 
 @media all and (max-width:480px) {
   
-
   .galleryView {
     .img-wrapper {
       height: 220px;
+    }
+
+    .title {
+      a {
+       text-align: center;
+     }
+     p {
+       display: none;
+     }
     }
 
     .card {
@@ -356,17 +355,18 @@ body {
   }
 }
 
-@media all and (max-width:400px) {
+@media all and (max-width:365px) {
   html {
-    font-size: 10.5px;
+    font-size: 12.5px;
   }
   .galleryView {
     .img-wrapper {
-      height: 180px;
+      height: 210px;
     }
-
+    
     .card {
-      width: 120px;
+      width: 135px;
     }
   }
 }
+
