--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,9 +27,12 @@ body {
   text-align: center;
   cursor: pointer;
   transition: all 0.1s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   span {
-    line-height: 2.1em;
+    // line-height: 2em;
     font-size: 1.3em;
     font-weight: 500;
   }
